Fix a false value being converted to zero

--- a/sumPairs.spec.html
+++ b/sumPairs.spec.html
@@ -28,6 +28,7 @@
         test([9007199254740992,9007199254740993], ["skipped"]);
         test([9007199254740990,3], ["skipped"]);
         test([9007199254740990,3,1,2], ["skipped",3]);
+        test([9007199254740992,3,1], ["skipped",1]);
     });
 </script>
 </body>
