--- a/specs.html
+++ b/specs.html
@@ -14,6 +14,7 @@
 <script src="removeDuplicateChars.js"></script>
 <script src="scheduleMeeting.js"></script>
 <script src="scheduleMeeting_withDateObj.js"></script>
+<script src="huffmanCoding.js"></script>
 <script>
     QUnit.test( "Remove duplicate characters from a string", ( assert ) => {
         assert.equal(measureTimeToExecute(removeDuplicateChars, 'aabcded'), 'abcde');
